z-index fix

--- a/force-app/main/educationCloudSettings/lwc/edcReleaseManagementCard/edcReleaseManagementCard.css
+++ b/force-app/main/educationCloudSettings/lwc/edcReleaseManagementCard/edcReleaseManagementCard.css
@@ -15,7 +15,7 @@
     animation-duration: 1s;
     animation-iteration-count: 1000;
     transform-origin: center top;
-    z-index: 1000;
+    z-index: 10;
 }
 @keyframes bell {
     0% {transform: rotate(35deg);}
